src/test/ui/issues/issue-17718-static-move.stderr
error[E0507]: cannot move out of static item
  --> $DIR/issue-17718-static-move.rs:6:14
   |
LL |     let _a = FOO; //~ ERROR: cannot move out of static item
   |              ^^^
   |              |
   |              cannot move out of static item
   |              help: consider using a reference instead: `&FOO`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
